# bzip2-meson-wrap

./: meson.build
bzip2-1.0.6/: meson.build
